[gd_scene load_steps=27 format=3 uid="uid://ci27kh0sx6wuk"]

[ext_resource type="Script" path="res://scenes/scripts/lightenemy.gd" id="1_k7x6a"]
[ext_resource type="Texture2D" uid="uid://2gmvoprbgxl6" path="res://data/enemy/death.png" id="2_3ykc1"]
[ext_resource type="PackedScene" uid="uid://c61xn2acved5o" path="res://scenes/enemybullet.tscn" id="2_h5guy"]
[ext_resource type="Texture2D" uid="uid://cpl0c1xjetjc8" path="res://data/enemy/enemy.png" id="3_yc8v0"]
[ext_resource type="AudioStream" uid="uid://dtq2yuhg2cegc" path="res://data/enemy/sounds/hit.mp3" id="4_rx4js"]
[ext_resource type="AudioStream" uid="uid://5r4hfiymwtot" path="res://data/player/sounds/death.mp3" id="6_mlpkn"]

[sub_resource type="AtlasTexture" id="AtlasTexture_23che"]
atlas = ExtResource("2_3ykc1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_jgy12"]
atlas = ExtResource("2_3ykc1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oagsi"]
atlas = ExtResource("2_3ykc1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qnv8o"]
atlas = ExtResource("2_3ykc1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_csrwa"]
atlas = ExtResource("2_3ykc1")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctkot"]
atlas = ExtResource("2_3ykc1")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_flyei"]
atlas = ExtResource("2_3ykc1")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrqor"]
atlas = ExtResource("2_3ykc1")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_57omo"]
atlas = ExtResource("2_3ykc1")
region = Rect2(126, 0, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_01bb4"]
atlas = ExtResource("3_yc8v0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nm2i2"]
atlas = ExtResource("3_yc8v0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_37uh5"]
atlas = ExtResource("3_yc8v0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_frpna"]
atlas = ExtResource("3_yc8v0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6pjp"]
atlas = ExtResource("3_yc8v0")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3i0rm"]
atlas = ExtResource("3_yc8v0")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_28enl"]
atlas = ExtResource("3_yc8v0")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfe5s"]
atlas = ExtResource("3_yc8v0")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_8xqqx"]
animations = [{
"frames": [{
"duration": 3.0,
"texture": SubResource("AtlasTexture_23che")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_jgy12")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_oagsi")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_qnv8o")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_csrwa")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_ctkot")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_flyei")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_yrqor")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_57omo")
}],
"loop": false,
"name": &"death",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_01bb4")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_nm2i2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_37uh5")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_frpna")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_nm2i2")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_37uh5")
}],
"loop": true,
"name": &"idle",
"speed": 30.0
}, {
"frames": [{
"duration": 5.0,
"texture": SubResource("AtlasTexture_j6pjp")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_3i0rm")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_28enl")
}, {
"duration": 5.0,
"texture": SubResource("AtlasTexture_vfe5s")
}],
"loop": true,
"name": &"move",
"speed": 30.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kbali"]
size = Vector2(32, 50)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pt1up"]
size = Vector2(46, 33)

[node name="EnemyLight" type="CharacterBody2D"]
position = Vector2(-50, -48)
collision_layer = 4
collision_mask = 8
script = ExtResource("1_k7x6a")
projectile = ExtResource("2_h5guy")

[node name="EnemySprite" type="AnimatedSprite2D" parent="."]
position = Vector2(49.9114, 48.9114)
scale = Vector2(3.06803, 3.06803)
sprite_frames = SubResource("SpriteFrames_8xqqx")
animation = &"idle"

[node name="EnemyCollision" type="CollisionShape2D" parent="."]
position = Vector2(50, 50)
rotation = 1.5708
shape = SubResource("RectangleShape2D_kbali")

[node name="HitSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(50, 48)
stream = ExtResource("4_rx4js")

[node name="DeathSound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(50, 48)
stream = ExtResource("6_mlpkn")

[node name="ActivationTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true

[node name="VisibleNotifier" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(50, 48)

[node name="InteractionSignal" type="Area2D" parent="."]
position = Vector2(50, 48)

[node name="SignalCollider" type="CollisionShape2D" parent="InteractionSignal"]
position = Vector2(0, 2.5)
shape = SubResource("RectangleShape2D_pt1up")

[node name="ProjectileMarker" type="Marker2D" parent="."]
position = Vector2(26, 22)

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="ShootingDelay" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="animation_finished" from="EnemySprite" to="." method="_on_enemy_sprite_animation_finished"]
[connection signal="finished" from="DeathSound" to="." method="_on_death_sound_finished"]
[connection signal="timeout" from="ActivationTimer" to="." method="_on_activation_timer_timeout"]
[connection signal="screen_entered" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_entered"]
[connection signal="screen_exited" from="VisibleNotifier" to="." method="_on_visible_notifier_screen_exited"]
[connection signal="body_entered" from="InteractionSignal" to="." method="_on_interaction_signal_body_entered"]
[connection signal="timeout" from="ShootingTimer" to="." method="_on_shooting_timer_timeout"]
[connection signal="timeout" from="ShootingDelay" to="." method="_on_shooting_delay_timeout"]
